--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
     "@react-icons/all-files": "^4.1.0",
+    "axios": "^1.13.2",
+    "cors": "^2.8.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
